spins use pre_gold variable now

--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -46,11 +46,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/kde-pre-banner.png" alt="KDE banner" /><br />
     	  	  <span class="grey">${_('A complete, modern desktop built using the KDE Plasma Desktop.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-KDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-KDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_KDE']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-KDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-KDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_KDE']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -68,11 +68,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/xfce-pre-banner.png" alt="Xfce banner" /><br />
     	  	  <span class="grey">${_('A complete, well-integrated Xfce Desktop.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-Xfce-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-Xfce-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Xfce']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-Xfce-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-Xfce-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Xfce']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -90,11 +90,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/lxde-pre-banner.png" alt="LXDE banner" /><br />
     	  	  <span class="grey">${_('A light, fast, less-resource hungry desktop environment.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-LXDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-LXDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_LXDE']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-LXDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-LXDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_LXDE']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -112,11 +112,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/mate-compiz-pre-banner.png" alt="MATE-Compiz banner" /><br />
     	  	  <span class="grey">${_('A classic Fedora Desktop. With wobbly Windows.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-MATE_Compiz-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-MATE_Compiz-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Mate']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-MATE_Compiz-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-MATE_Compiz-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Mate']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -134,11 +134,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/cinnamon-pre-banner.png" alt="Cinnamon banner" /><br />
     	  	  <span class="grey">${_('Traditional layout, advanced features, easy to use.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-Cinnamon-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-Cinnamon-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Cinnamon']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-Cinnamon-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-Cinnamon-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Cinnamon']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -156,11 +156,11 @@
     	  	  <p class="screenshot"><img src="${path}/static/images/soas-pre-banner.png" alt="SoaS banner" /><br />
     	  	  <span class="grey">${_('Discover. Reflect. Share. Learn.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-SoaS-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">64-bit image</a>
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-SoaS-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Soas']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-   	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-SoaS-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">32-bit image</a>
+   	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-SoaS-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_i686_Live_Soas']}</h5>
   	  	  		</div>
   	  	  	</div>
@@ -179,10 +179,10 @@
     	<p>${Markup(_('Once you have downloaded an image, verify it for security and integrity. To verify your image, start by downloading the proper CHECKSUM file into the same directory as the image you downloaded and follow &lt;a href="../../%s/verify"&gt;these instructions&lt;/a&gt;.') % (lang))}</p>
           <div class="row bottom-margin">
             <div class="col-sm-4 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Validate 64bit!')}</a>
+              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Validate 64bit!')}</a>
             </div>
             <div class="col-sm-4 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Validate 32bit!')}</a>
+              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Validate 32bit!')}</a>
             </div>
           </div>
   	  </div>
