--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -16,7 +16,7 @@
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s %(state)s Workstation')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h2>
             <div class="fmw-macos hidden">
-              <p><a class="btn btn-success" href="https://github.com/MartinBriza/MediaWriter/releases/download/3.96.0/FedoraMediaWriter-mac-3.96.0.dmg" role="button">${_('Download')}</a></p>
+              <p><a class="btn btn-success" href="${path}/fmw/FedoraMediaWriter-osx-3.97.1-17-g480c143.dmg" role="button">${_('Download')}</a></p>
               <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Mac OS X&lt;/strong&gt;')) % global_variables.iso_size['macosx']}</p>
             </div>
             <div class="fmw-linux hidden">
@@ -25,7 +25,7 @@
               ${Markup(_('&lt;a href="%s"&gt;Install via DNF&lt;/a&gt; if you are already on Fedora.') % ('https://fedoraproject.org/wiki/DNF_system_upgrade'))}</p>
             </div>
             <div class="fmw-windows hidden">
-              <p><a class="btn btn-success" href="https://github.com/MartinBriza/MediaWriter/releases/download/3.96.0/FedoraMediaWriter-win-3.96.0.exe" role="button">${_('Download')}</a></p>
+              <p><a class="btn btn-success" href="${path}/fmw/FedoraMediaWriter-win32-3.97.1-13-g10ee195.exe" role="button">${_('Download')}</a></p>
               <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Windows&lt;/strong&gt;')) % global_variables.iso_size['windows']}</p>
             </div>
             <p class="fmw-generic hidden">${_('Download Fedora Media Writer for your operating system.')}</p>
@@ -109,7 +109,7 @@
                       <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Mac OS X&lt;/strong&gt;')) % global_variables.iso_size['macosx']}</p>
                 </div>
                 <div class="jumbotron download">
-                      <a class="btn btn-success" href="https://github.com/MartinBriza/MediaWriter/releases/download/3.96.0/FedoraMediaWriter-mac-3.96.0.dmg" role="button">${_('Download')}</a>
+                      <a class="btn btn-success" href="${path}/fmw/FedoraMediaWriter-osx-3.97.1-17-g480c143.dmg" role="button">${_('Download')}</a>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-4 text-center">
@@ -118,7 +118,7 @@
                       <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Windows&lt;/strong&gt;')) % global_variables.iso_size['windows']}</p>
                 </div>
                 <div class="jumbotron download">
-                      <a class="btn btn-success" href="https://github.com/MartinBriza/MediaWriter/releases/download/3.96.0/FedoraMediaWriter-win-3.96.0.exe" role="button">${_('Download')}</a>
+                      <a class="btn btn-success" href="${path}/fmw/FedoraMediaWriter-win32-3.97.1-13-g10ee195.exe" role="button">${_('Download')}</a>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-4 text-center">
