--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -70,7 +70,23 @@
             </ul>
           <p>${_('Fedora Workstation is provided via Fedora Media Writer. Download this program via the download link above and run it on your system, following the prompts to generate a live version (see \'What does "Live" mean?\' to the right) of Fedora Workstation on a USB flash drive. You may then run the live version of Fedora Workstation from your USB flash drive.')}</p>
           <p>${_('Optionally, you may install Fedora Workstation to a laptop or desktop computer that has at least 1 GHz processor, 1 GB RAM, and 10 GB space available. To do this, run the live version of Fedora Workstation from your USB flash drive on the computer you\'d like to install to, run the Fedora Media Writer application, and follow the on-screen prompts to complete installation.')}</p>
-          <xi:include href="../../../templates/generic/docs-links.html" />
+
+          <h3>${_('Supported Platforms')}</h3>
+          <p>${_('Fedora Media Writer supports the following platforms:')}</p>
+          <ul>
+              <li>${_('Mac OS X')}</li>
+              <li>${_('Windows')}</li>
+              <li>${_('Linux')}</li>
+          </ul>
+          <div class="fmw-macos hidden">
+              <p>${_('We have auto-detected that you are running Mac OS X and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+          </div>
+          <div class="fmw-linux hidden">
+              <p>${_('We have auto-detected that you are running Linux and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+          </div>
+          <div class="fmw-windows hidden">
+              <p>${_('We have auto-detected that you are running Windows and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+          </div>
           <xi:include href="../../../templates/generic/other-media-sources.html" />
           <hr />
           <xi:include href="../../../templates/export-regulations.html" />
