--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -137,6 +137,7 @@
         </div>
         <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
+          <p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Live image')) % global_variables.iso_size['x86_64_workstation']}</a></p>
           <p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i386_workstation']}</a></p>
           <p>
           ${_('Netinstall Images:')}
@@ -169,6 +170,17 @@
             </py:when>
           </py:choose>
           </div>
+          <div class="top-margin bottom-margin"><h4>${_('Resources')}</h4></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-book"></i>${Markup(_('&lt;a href="//docs.fedoraproject.org/release-notes"&gt;&lt;strong&gt;Release Notes&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <div class="pull-right bottom-step"><p>${_('Learn about changes since the last version of Fedora as well as minimum requirements and recommendations for running Fedora.')}</p></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-book"></i>${Markup(_('&lt;a href="//docs.fedoraproject.org/install-guide"&gt;&lt;strong&gt;Installation Guide&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <div class="pull-right bottom-step"><p>${_('We recommend you look through this before installing to your system, since it answers many common questions.')}</p></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Common Bugs&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_id'])})}</p>
+          <div class="pull-right bottom-margin"><p>${_('An excellent resource to consult in case you run into any issues installing or running Fedora.')}</p></div>
+
+          <div class="bottom-margin"><h4>${_('What does "Live" mean?')}</h4></div>
+          <div class="bottom-step"><p>${_('Fedora Media Writer will create a complete, running Fedora Workstation you can run right away off of a USB drive. You can use the Live image to test and play with Fedora without making changes to your hard disk.')}</p></div>
+          <p>${_('When you are ready, you can install Fedora to your hard disk from within this "live" version of Fedora Workstation.')}</p>
           <div class="bottom-margin">
             <h3>${_('Get more Fedora')}</h3>
               <ul>
