detected OS should be bold

--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -79,13 +79,13 @@
               <li>${_('Linux')}</li>
           </ul>
           <div class="fmw-macos hidden">
-              <p>${_('We have auto-detected that you are running Mac OS X and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+              <p>${Markup(_('We have auto-detected that you are running &lt;strong&gt;Mac OS X&lt;/strong&gt; and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.'))}</p>
           </div>
           <div class="fmw-linux hidden">
-              <p>${_('We have auto-detected that you are running Linux and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+              <p>${Markup(_('We have auto-detected that you are running &lt;strong&gt;Linux&lt;/strong&gt; and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.'))}</p>
           </div>
           <div class="fmw-windows hidden">
-              <p>${_('We have auto-detected that you are running Windows and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.')}</p>
+              <p>${Markup(_('We have auto-detected that you are running &lt;strong&gt;Windows&lt;/strong&gt; and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.'))}</p>
           </div>
 
           <div id="fmw">
