--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -22,53 +22,64 @@
   </div>
 
    <header id="head">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 col-xs-12 highlight productitem workstation">
-          <a href="../${lang}/workstation">
-            <div class="productitem-logo">
-                <div class="h-caption color"></div>
-            </div></a>
-            <div class="h-body text-justify top-margin liveusb">
-              <p>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</p>
-              <p class="visible-xs text-center uppercase"><a class="btn btn-edition" href="../${lang}/workstation/download" role="button">${_('Download now')}</a></p>
-            </div>
+      <div id="product-logo-row">
+        <div class="col-sm-4 col-xs-12 productitem workstation">
+          <div class="edition-logo">
+          <a href="../en/workstation">
+            <img src="${path}/static/images/ws-logo.png" />
+            <h3>Workstation</h3>
+          </a>
+          <a href="#">Download Now</a>
+
+          </div>
         </div>
-        <div class="col-sm-4 col-xs-12 highlight productitem server">
-          <a href="../${lang}/server">
-            <div class="productitem-logo">
-                <div class="h-caption color"></div>
-            </div></a>
-            <div class="h-body text-justify top-margin liveusb">
-              <p>${_('Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.')}</p>
-              <p class="visible-xs text-center uppercase"><a class="btn btn-edition" href="../${lang}/server/download" role="button">${_('Download now')}</a></p>
-            </div>
+        <div class="col-sm-4 col-xs-12 productitem server">
+          <div class="edition-logo">
+          <a href="../en/server">
+            <img src="${path}/static/images/server-logo-next.png" />
+            <h3>Server</h3>
+          </a>
+          <a href="#">Download Now</a>
+          </div>
         </div>
-        <div class="col-sm-4 col-xs-12 highlight productitem cloud">
-          <a href="../${lang}/cloud">
-            <div class="productitem-logo">
-                <div class="h-caption color"></div>
-            </div></a>
-            <div class="h-body text-justify top-margin">
-              <p>${_('Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.')}</p>
-              <p class="visible-xs text-center uppercase bottom-space"><a class="btn btn-edition" href="../${lang}/cloud/download" role="button">${_('Download now')}</a></p>
-            </div>
+        <div class="col-sm-4 col-xs-12 productitem atomic">
+          <div class="edition-logo">
+          <a href="../en/cloud">
+            <img src="${path}/static/images/atomic-logo.png" />
+            <h3>Atomic</h3>
+          </a>
+          <a href="#">Download Now</a>
+          </div>
         </div>
       </div>
-      <div class="row bottom-margin-edition hidden-xs">
-	  	  <div class="col-sm-4 text-center">
-		      <p class="uppercase"><a class="btn btn-edition" href="../${lang}/workstation/download" role="button">${_('Download now')}</a></p>
-	  	  </div>
-	  	  <div class="col-sm-4 text-center">
-		      <p class="uppercase"><a class="btn btn-edition" href="../${lang}/server/download" role="button">${_('Download now')}</a></p>
-	  	  </div>
-	  	  <div class="col-sm-4 text-center">
-		      <p class="uppercase"><a class="btn btn-edition" href="../${lang}/cloud/download" role="button">${_('Download now')}</a></p>
-	  	  </div>
-  	  </div>
+      <div id="product-desc-row">
+        <div class="col-sm-4 col-xs-12 productdesc workstation">
+          <div class="h-body text-justify top-margin liveusb">
+            <p>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</p>
+            <p class="visible-xs text-center uppercase">
+              <a role="button" href="../en/workstation/download" class="btn btn-edition">Download now</a>
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12 productdesc server">
+          <div class="h-body text-justify top-margin liveusb">
+            <p>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</p>
+            <p class="visible-xs text-center uppercase">
+              <a role="button" href="../en/server/download" class="btn btn-edition">Download now</a>
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12 productdesc cloud">
+          <div class="h-body text-justify top-margin">
+            <p>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</p>
+            <p class="visible-xs text-center uppercase bottom-space">
+              <a role="button" href="../en/cloud/download" class="btn btn-edition">Download now</a>
+            </p>
+          </div>
+        </div>
+      </div>
 
-    </div>
-  </header>
+    </header>
 
 	<div class="col-xs-12 blue-pattern-box"></div>
 
