--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -25,30 +25,30 @@
       <div id="product-logo-row">
         <div class="col-sm-4 col-xs-12 productitem workstation">
           <div class="edition-logo">
-          <a href="../en/workstation">
+          <a href="../${lang}/workstation">
             <img src="${path}/static/images/ws-logo.png" />
             <h3>Workstation</h3>
           </a>
-          <a href="#">Download Now</a>
+          <a href="../${lang}/workstation/download">Download Now</a>
 
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productitem server">
           <div class="edition-logo">
-          <a href="../en/server">
+          <a href="../${lang}/server">
             <img src="${path}/static/images/server-logo-next.png" />
             <h3>Server</h3>
           </a>
-          <a href="#">Download Now</a>
+          <a href="../${lang}/server/download">Download Now</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productitem atomic">
           <div class="edition-logo">
-          <a href="../en/cloud">
+          <a href="../${lang}/cloud">
             <img src="${path}/static/images/atomic-logo.png" />
             <h3>Atomic</h3>
           </a>
-          <a href="#">Download Now</a>
+          <a href="../${lang}/cloud/download">Download Now</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
           <div class="h-body text-justify top-margin liveusb">
             <p>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</p>
             <p class="visible-xs text-center uppercase">
-              <a role="button" href="../en/workstation/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">Download now</a>
             </p>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <div class="h-body text-justify top-margin liveusb">
             <p>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</p>
             <p class="visible-xs text-center uppercase">
-              <a role="button" href="../en/server/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/server/download" class="btn btn-edition">Download now</a>
             </p>
           </div>
         </div>
@@ -73,7 +73,7 @@
           <div class="h-body text-justify top-margin">
             <p>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</p>
             <p class="visible-xs text-center uppercase bottom-space">
-              <a role="button" href="../en/cloud/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/cloud/download" class="btn btn-edition">Download now</a>
             </p>
           </div>
         </div>
