--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -13,9 +13,9 @@
   <div class="main-head-index">
     <div class="container">
       <div class="row">
-        <div class="col-xs-8 col-xs-offset-2 bottom-margin">
-            <h1 class="thin">${_('Choose Freedom. Choose Fedora.')}</h1>
-            <h4 class="thin">${_('Less setup, more innovation. Choose a flavor of Fedora streamlined for your needs, and get to work right away.')}</h4>
+        <div class="col-xs-12">
+            <h1>${_('Choose Freedom. Choose Fedora.')}</h1>
+            <p><h4>${Markup(_('Less setup, more innovation. Choose a flavor of Fedora&lt;br /&gt;&lt;br /&gt; streamlined for your needs, and get to work right away.'))}</h4></p>
         </div>
       </div>
     </div>
