make a nicer product description and style - this is not mobile friendly for now

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -52,26 +52,37 @@
           </div>
         </div>
       </div>
-      <div id="product-desc-row">
+      <div class="row">
+	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
+	       <hr />
+	    </div>
+	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
+		   <hr />
+	    </div>
+	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
+		   <hr />
+	    </div>
+      </div>
+      <div class="row">
         <div class="col-sm-4 col-xs-12 productdesc workstation">
-          <div class="h-body text-justify top-margin liveusb">
-            <p>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</p>
+          <div class="h-body text-justify liveusb">
+            <h4>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</h4>
             <p class="visible-xs text-center uppercase">
               <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">Download now</a>
             </p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc server">
-          <div class="h-body text-justify top-margin liveusb">
-            <p>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</p>
+          <div class="h-body text-justify liveusb">
+            <h4>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</h4>
             <p class="visible-xs text-center uppercase">
               <a role="button" href="../${lang}/server/download" class="btn btn-edition">Download now</a>
             </p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc cloud">
-          <div class="h-body text-justify top-margin">
-            <p>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</p>
+          <div class="h-body text-justify">
+            <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
             <p class="visible-xs text-center uppercase bottom-space">
               <a role="button" href="../${lang}/cloud/download" class="btn btn-edition">Download now</a>
             </p>
@@ -81,9 +92,7 @@
 
     </header>
 
-	<div class="col-xs-12 blue-pattern-box"></div>
-
-    <div class="text-center grey-pattern-box">
+    <div class="text-center grey-pattern-box top-margin">
       <div class="container">
       	<div class="row">
 	        <div class="col-xs-12 col-sm-3">
